--- a/login.ui
+++ b/login.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>872</width>
-    <height>499</height>
+    <width>600</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>872</width>
-    <height>499</height>
+    <width>600</width>
+    <height>432</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>872</width>
-    <height>499</height>
+    <width>600</width>
+    <height>432</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,14 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QLabel#lblTitle{
+   <string notr="true"/>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">QLabel#bgLabel{
+background:rgb(20, 50, 120);
+}
+QLabel#lblTitle{
 background:rgb(255,255,255);
 }
 QLabel{
@@ -39,17 +46,16 @@ QLineEdit{
 color:rgb(100,170,255);
 }
 QLabel#bgLabel{
-color:rgb(20,20,255);
+color:rgb(20,20,0);
 }</string>
-  </property>
-  <widget class="QWidget" name="centralwidget">
+   </property>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>40</y>
-      <width>821</width>
-      <height>451</height>
+      <width>551</width>
+      <height>361</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -63,7 +69,10 @@ color:rgb(20,20,255);
         </font>
        </property>
        <property name="text">
-        <string>Year 12 GUI Design Example</string>
+        <string>Video Database Login</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -189,6 +198,14 @@ color:rgb(20,20,255);
       <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,1,4">
        <item>
         <widget class="QPushButton" name="btnClear">
+         <property name="font">
+          <font>
+           <family>Microsoft JhengHei</family>
+           <pointsize>11</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Clear</string>
          </property>
@@ -196,6 +213,14 @@ color:rgb(20,20,255);
        </item>
        <item>
         <widget class="QPushButton" name="btnLogin">
+         <property name="font">
+          <font>
+           <family>Microsoft JhengHei</family>
+           <pointsize>11</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Login</string>
          </property>
@@ -218,6 +243,24 @@ color:rgb(20,20,255);
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="bgLabel">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>621</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>bgLabel</zorder>
+   <zorder>verticalLayoutWidget</zorder>
   </widget>
  </widget>
  <resources/>
