additional Edits to the Ui file - added additional QCSS

--- a/login.ui
+++ b/login.ui
@@ -43,10 +43,18 @@ QLabel{
 color:rgb(100,170,255);
 }
 QLineEdit{
-color:rgb(100,170,255);
+color:rgb(13,3,75);
 }
+QLineEdit::focus{
+background:rgb(118,239,142);
+color:rgb(4,36,10;)
+}
+
 QLabel#bgLabel{
 color:rgb(20,20,0);
+}
+QPushButton::hover{
+background:rgb(192,182,238)
 }</string>
    </property>
    <widget class="QWidget" name="verticalLayoutWidget">
